@@ -2,6 +2,7 @@
 /glib
 /lib3ds
 /libCEGUI
+/libassimp
 /libbullet
 /libcaca
 /libcal3d
