@@ -5,6 +5,7 @@
  - Updated freetype to 2.4.11.
  - Updated bullet to 2.81.
  - Updated Cg to 3.1 (April 2012).
+ - Added Open Asset Import Library (aka assimp) 3.0.
 
 2.1_002 (2012-10-14):
  - Updated libjpeg to 8d.
